--- a/components/media.scss
+++ b/components/media.scss
@@ -1,3 +1,10 @@
+@mixin smallMonitor {
+  @media screen and (max-width: 1250px){
+    @content;
+  }
+    
+  }
+
 @mixin notebook {
   @media screen and (max-width: 950px) {
     @content;
