--- a/components/style.css
+++ b/components/style.css
@@ -82,111 +82,77 @@
   border-radius: 10px;
 }
 
-.news {
-  padding-top: 2rem;
+.news__content {
+  padding: 5rem 0 5rem 0;
+  background: url(../img/photodraw.ru-31717.jpeg);
 }
-.news .news__inner {
+
+.news__inner {
+  width: 100%;
   height: 30rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
-.event {
+.news__item {
+  position: relative;
   width: 68%;
   height: 100%;
   overflow: hidden;
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
-.event .event__img {
+
+.news__img {
   position: absolute;
+  width: 100%;
   top: 50%;
   left: 50%;
-  z-index: 1;
   -webkit-transform: translate3d(-50%, -50%, 0);
           transform: translate3d(-50%, -50%, 0);
-  width: 100%;
+  opacity: 0.8;
+  -webkit-transition: opacity 0.2s linear;
+  transition: opacity 0.2s linear;
+  -webkit-transition: width 0.2s linear;
+  transition: width 0.2s linear;
+}
+.news__img:hover {
+  opacity: 1;
+  width: 110%;
 }
 
-.slider__items {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.event__content {
-  z-index: 2;
-  width: 100%;
-  height: 80%;
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-.event__content .event__text {
-  background: rgba(0, 0, 0, 0.445);
-  width: 63%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.69);
-}
-.event__content .event__text .event__date {
-  font-size: 1rem;
-  color: #fff;
-}
-.event__content .event__text .event__title {
-  padding-top: 1rem;
-  font-size: 2.5rem;
-  color: #fff;
-}
-
-.event__button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-top: 1.47rem;
-}
-
-.event__side {
+.news__side {
   width: 30%;
   height: 100%;
-  margin-left: 1.47rem;
+  margin-left: 2rem;
 }
-.event__side .event__side--item {
+
+.news__side--item {
+  margin-top: 2rem;
+  height: 47%;
   width: 100%;
-  height: 48%;
-  margin-bottom: 1.47rem;
   overflow: hidden;
+  position: relative;
 }
-.event__side .event__side--item:last-child {
-  margin-bottom: 0;
+.news__side--item:first-child {
+  margin: 0;
 }
-.event__side .side__img {
-  width: 100%;
+
+.side__img {
+  position: absolute;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+          transform: translate3d(-50%, -50%, 0);
+  opacity: 0.8;
+  -webkit-transition: opacity 0.2s linear;
+  transition: opacity 0.2s linear;
+  -webkit-transition: height 0.2s linear;
+  transition: height 0.2s linear;
+}
+.side__img:hover {
+  opacity: 1;
+  height: 110%;
 }
 
 .button {
@@ -202,7 +168,7 @@
   font-size: 2.875rem;
   font-weight: bold;
   color: #000;
-  padding: 6.25rem 0 3.125rem 0;
+  padding: 4.25rem 0 3.125rem 0;
   margin: 0;
 }
 
@@ -354,6 +320,7 @@ ul li {
   list-style: none;
 }
 
+/*-----SMALLMONITOR----*/
 /*-----NOTEBOOK----*/
 /*-----HEADER----*/
 @media screen and (max-width: 950px) {
@@ -383,6 +350,12 @@ ul li {
 
 /*------NEWS--------*/
 @media screen and (max-width: 950px) {
+  .news__content {
+    padding: 2rem 0 17rem 0;
+  }
+}
+
+@media screen and (max-width: 950px) {
   .news__inner {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -390,39 +363,34 @@ ul li {
 }
 
 @media screen and (max-width: 950px) {
-  .event {
+  .news__item {
     width: 100%;
   }
 }
 
 @media screen and (max-width: 950px) {
-  .event__side {
+  .news__side {
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 100%;
-    height: 40%;
-    margin-left: 0;
-    margin-top: 1.47rem;
+    margin: 2rem 0 0 0;
+    height: 45%;
   }
 }
+
 @media screen and (max-width: 950px) {
-  .event__side .event__side--item {
+  .news__side--item {
     height: 100%;
-    width: 49%;
-    margin-left: 1.47rem;
+    width: 50%;
+    margin-left: 2rem;
   }
-  .event__side .event__side--item:first-child {
-    margin-left: 0;
+  .news__side--item:last-child {
+    margin-top: 0;
   }
 }
 
 /*------PROGRAMMS--------*/
-@media screen and (max-width: 950px) {
-  .programms {
-    margin-top: 11rem;
-  }
-}
 @media screen and (max-width: 950px) {
   .programms .programms__inner {
     -webkit-box-orient: vertical;
@@ -458,8 +426,7 @@ ul li {
 
 @media screen and (max-width: 768px) {
   .logo .logo__text {
-    margin-left: 0;
-    display: none;
+    margin-left: 1.5rem;
   }
 }
 
