--- a/components/style.scss
+++ b/components/style.scss
@@ -69,6 +69,12 @@ html{
     list-style: none;
   }
 
+
+/*-----SMALLMONITOR----*/
+
+
+
+
 /*-----NOTEBOOK----*/
 
 /*-----HEADER----*/
@@ -94,36 +100,41 @@ html{
 }
 
 /*------NEWS--------*/
+
+.news__content{
+  @include notebook{
+    padding: 2rem 0 17rem 0;
+  }
+}
+
 .news__inner{
   @include notebook{
     flex-wrap: wrap;
   }
 }
 
-.event{
+.news__item{
   @include notebook{
     width: 100%;
   }
 }
 
-.event__side{
+.news__side{
   @include notebook{
-    display: flex;
     width: 100%;
-    height: 40%;
-    margin-left: 0;
-    margin-top: 1.47rem;
+    display: flex;
+    margin: 2rem 0 0 0;
+    height: 45%;
   }
+}
 
-  .event__side--item{
-    @include notebook{
+.news__side--item{
+  @include notebook{
     height: 100%;
-    width: 49%;
-    margin-left: 1.47rem;
-
-    &:first-child{
-      margin-left: 0;
-    }
+    width: 50%;
+    margin-left: 2rem;
+    &:last-child{
+      margin-top: 0;
     }
   }
 }
@@ -132,7 +143,7 @@ html{
 
 .programms{
   @include notebook{
-    margin-top: 11rem;
+    
   }
 
   .programms__inner{
@@ -173,8 +184,8 @@ html{
 }
 .logo__text{
   @include tablets{
-    margin-left: 0;
-    display: none;
+    margin-left: 1.5rem;
+    
   }
 }
 }
