--- a/components/button.scss
+++ b/components/button.scss
@@ -1,8 +1,15 @@
 .button{
-    padding: 1rem 2rem;
-    border-radius: 5px;
-    background-color: orangered;
+    padding: 0.8rem 1.5rem;
+    border-radius: 25px;
     color: #fff;
     text-transform: uppercase;
     font-weight: bold;
+    border: 1px solid white;
+    box-shadow: 0px 0px 5px #fff;
+    text-shadow: 1px 1px 5px rgb(0 0 0 / 50%);
+
+    &:hover{
+        background-color: #00084fe8;
+        border: 1px solid transparent;
+    }
 }
