--- a/components/news.scss
+++ b/components/news.scss
@@ -1,6 +1,5 @@
 .news__content{
     padding: 5rem 0 5rem 0;
-    background: url(../img/photodraw.ru-31717.jpeg);
 }
 
 
@@ -23,14 +22,94 @@
     top: 50%;
     left: 50%;
     transform: translate3d(-50%, -50%, 0);
-    opacity: 0.8;
     transition: opacity 0.2s linear;
     transition: width 0.2s linear;
+    z-index: 1;
 
     &:hover{
         opacity: 1;
         width: 110%;
     }
+}
+
+.news__item--content{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 2;
+}
+
+.news__text--content{
+    margin-top: 3rem;
+    margin-left: 2rem;
+}
+
+.news__text{
+    width: 95%;
+    height: 100%;
+}
+
+.news__date{
+    color: #fff;
+    font-weight: bold;
+    font-size: 2rem;
+    text-shadow: 1px 1px 5px rgb(0 0 0 / 50%);
+}
+
+.news__title{
+    margin-top: 1rem;
+    color: #fff;
+    font-weight: 600;
+    font-size: 3rem;
+    text-shadow: 1px 1px 5px rgb(0 0 0 / 50%);
+}
+
+.news__paginator{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    width: 5%;
+    background-color: #3d4252e0;
+}
+
+.paginator__item{
+    width: 0.7rem;
+    height: 0.7rem;
+    background-color: #fff;
+    border-radius: 50%;
+    margin-top: 1rem;
+}
+
+.paginator__up{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    background-color: #E3B838;
+}
+
+.paginator__down{
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    background-color: #E3B838;
+}
+
+
+.paginator__icon{
+    
+    width: 60%;
 }
 
 .news__side{
@@ -41,6 +120,7 @@
 }
 
 .news__side--item{
+    background-color: #E3B838;
     margin-top: 2rem;
     height: 47%;
     width: 100%;
@@ -52,17 +132,32 @@
 }
 
 .side__img{
+    z-index: 1;
     position: absolute;
     height: 100%;
+    width: 101%;
     top: 50%;
     left: 50%;
     transform: translate3d(-50%, -50%, 0);
     opacity: 0.8;
-    transition: opacity 0.2s linear;
-    transition: height 0.2s linear;
+}
 
-    &:hover{
-        opacity: 1;
-        height: 110%;
-    }
+.news__side--content{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    margin-left: 2rem;
+    z-index: 2;
+}
+
+.news__side--text{
+    width: 70%;
+    font-size: 1.6rem;
+    padding-bottom: 2rem;
+    color: #fff;
+    font-weight: bold;
+    text-shadow: 1px 1px 5px rgb(0 0 0 / 50%);
 }
