--- a/components/style.css
+++ b/components/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @import "./normalize.css";
 .header {
-  background: #000081be;
+  background: url(../img/photodraw.ru-31717.jpeg) center no-repeat;
 }
 
 .menu {
@@ -22,13 +22,28 @@
   display: inline-flex;
   width: 50%;
   white-space: nowrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .menu__list .menu__item {
   margin-right: 1rem;
 }
+.menu__list .menu__item:last-child {
+  margin-right: 0;
+}
 .menu__list .menu__item .menu__link {
   font-size: 1.1rem;
   color: #fff;
+  -webkit-transition: font-size 0.1s linear;
+  transition: font-size 0.1s linear;
+}
+.menu__list .menu__item .menu__link:hover {
+  font-size: 1.3rem;
+  font-weight: bold;
 }
 
 .logo {
@@ -59,6 +74,65 @@
   color: #fff;
 }
 
+.nav {
+  width: 100%;
+  height: 3rem;
+  background: #3D4252;
+}
+
+.nav__inner {
+  width: 100%;
+  height: 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hamburger--nav {
+  width: 1.5rem;
+  height: 1.25rem;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.menu__list--nav {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  white-space: nowrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.menu__list--nav .menu__item {
+  margin-right: 1rem;
+}
+.menu__list--nav .menu__item:last-child {
+  margin-right: 0;
+}
+
+.menu__link--nav {
+  font-size: 1.1rem;
+  color: #fff;
+}
+
 .hamburger {
   width: 1.5rem;
   height: 1.25rem;
@@ -84,7 +158,6 @@
 
 .news__content {
   padding: 5rem 0 5rem 0;
-  background: url(../img/photodraw.ru-31717.jpeg);
 }
 
 .news__inner {
@@ -109,15 +182,118 @@
   left: 50%;
   -webkit-transform: translate3d(-50%, -50%, 0);
           transform: translate3d(-50%, -50%, 0);
-  opacity: 0.8;
   -webkit-transition: opacity 0.2s linear;
   transition: opacity 0.2s linear;
   -webkit-transition: width 0.2s linear;
   transition: width 0.2s linear;
+  z-index: 1;
 }
 .news__img:hover {
   opacity: 1;
   width: 110%;
+}
+
+.news__item--content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 2;
+}
+
+.news__text--content {
+  margin-top: 3rem;
+  margin-left: 2rem;
+}
+
+.news__text {
+  width: 95%;
+  height: 100%;
+}
+
+.news__date {
+  color: #fff;
+  font-weight: bold;
+  font-size: 2rem;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+}
+
+.news__title {
+  margin-top: 1rem;
+  color: #fff;
+  font-weight: 600;
+  font-size: 3rem;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+}
+
+.news__paginator {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  width: 5%;
+  background-color: #3d4252e0;
+}
+
+.paginator__item {
+  width: 0.7rem;
+  height: 0.7rem;
+  background-color: #fff;
+  border-radius: 50%;
+  margin-top: 1rem;
+}
+
+.paginator__up {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background-color: #E3B838;
+}
+
+.paginator__down {
+  margin-top: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background-color: #E3B838;
+}
+
+.paginator__icon {
+  width: 60%;
 }
 
 .news__side {
@@ -127,6 +303,7 @@
 }
 
 .news__side--item {
+  background-color: #E3B838;
   margin-top: 2rem;
   height: 47%;
   width: 100%;
@@ -138,30 +315,55 @@
 }
 
 .side__img {
+  z-index: 1;
   position: absolute;
   height: 100%;
+  width: 101%;
   top: 50%;
   left: 50%;
   -webkit-transform: translate3d(-50%, -50%, 0);
           transform: translate3d(-50%, -50%, 0);
   opacity: 0.8;
-  -webkit-transition: opacity 0.2s linear;
-  transition: opacity 0.2s linear;
-  -webkit-transition: height 0.2s linear;
-  transition: height 0.2s linear;
 }
-.side__img:hover {
-  opacity: 1;
-  height: 110%;
+
+.news__side--content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  margin-left: 2rem;
+  z-index: 2;
+}
+
+.news__side--text {
+  width: 70%;
+  font-size: 1.6rem;
+  padding-bottom: 2rem;
+  color: #fff;
+  font-weight: bold;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 .button {
-  padding: 1rem 2rem;
-  border-radius: 5px;
-  background-color: orangered;
+  padding: 0.8rem 1.5rem;
+  border-radius: 25px;
   color: #fff;
   text-transform: uppercase;
   font-weight: bold;
+  border: 1px solid white;
+  -webkit-box-shadow: 0px 0px 5px #fff;
+          box-shadow: 0px 0px 5px #fff;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+}
+.button:hover {
+  background-color: #00084fe8;
+  border: 1px solid transparent;
 }
 
 .programms__title {
@@ -345,6 +547,29 @@ ul li {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
+  }
+}
+
+/*------NAV--------*/
+@media screen and (max-width: 950px) {
+  .nav__inner {
+    width: 100%;
+    height: 3rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .hamburger--nav {
+    display: none;
   }
 }
 
