--- a/components/style.css
+++ b/components/style.css
@@ -370,7 +370,7 @@
   font-size: 2.875rem;
   font-weight: bold;
   color: #000;
-  padding: 4.25rem 0 3.125rem 0;
+  padding: 0 0 3.125rem 0;
   margin: 0;
 }
 
@@ -458,6 +458,57 @@
 .programms__link {
   color: #000081be;
   font-weight: bold;
+}
+
+.overley {
+  position: absolute;
+  background-color: #292929;
+  color: #fff;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.menu__list--overley {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 5rem;
+}
+.menu__list--overley:first-child {
+  margin-left: 0;
+}
+
+.menu__item--overley {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-top: 2rem;
+}
+
+.overley__close {
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+}
+
+.close__icon {
+  width: 40%;
 }
 
 html {
