--- a/components/style.scss
+++ b/components/style.scss
@@ -37,11 +37,15 @@ html{
   html,
   body{
     height: 100%;
+    background: url(../img/bg-lightl-888.jpg);
+    background-blend-mode: hard-light;
+    background-color: #f2f4fdab;
   }
   
   body{
     font-family: 'Play', sans-serif;
     font-size: $baseFontSize;
+    
   }
   
   .container{
