--- a/components/programms.scss
+++ b/components/programms.scss
@@ -19,6 +19,7 @@
 }
 
 .programms__item{
+    background: #fff;
     width: 30%;
     min-height: 25rem;
     border: 1px solid rgba(0, 0, 0, 0.205);
