--- a/components/style.scss
+++ b/components/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap');
 @import "./normalize.css";
 @import "header";
 @import "nav";
@@ -43,7 +43,7 @@ html{
   }
   
   body{
-    font-family: 'Play', sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: $baseFontSize;
     
   }
@@ -101,7 +101,8 @@ html{
 }
 .hamburger{
   @include notebook{
-    display: inline-flex;
+    display: flex;
+    align-items: center;
   }
 }
 
