--- a/components/hamburger.scss
+++ b/components/hamburger.scss
@@ -1,10 +1,19 @@
 .hamburger{
+  display: none;
+}
+
+.hamburger__text{
+  color: #fff;
+  font-weight: bold;
+  margin-right: 1rem;
+}
+
+.hamburger__list{
     width: 1.5rem;
     height: 1.25rem;
     display: inline-flex;
     flex-direction: column;
     justify-content: space-between;
-    display: none;
   }
   
   .hamburger__plank{
