--- a/components/nav.scss
+++ b/components/nav.scss
@@ -1,7 +1,7 @@
 .nav {
     width: 100%;
     height: 3rem;
-    background: #3D4252;
+    background:  url(../img/photodraw.ru-31717.jpeg)
 }
 
 .nav__inner {
