--- a/components/news.scss
+++ b/components/news.scss
@@ -1,3 +1,9 @@
+.news{
+    background: url(../img/photodraw.ru-31717.jpeg) center no-repeat;
+    background-size: cover;
+    margin-bottom: 5rem;
+}
+
 .news__content{
     padding: 5rem 0 5rem 0;
 }
@@ -14,6 +20,8 @@
     width: 68%;
     height: 100%;
     overflow: hidden;
+    background: #000
+    
 }
 
 .news__img{
@@ -25,16 +33,11 @@
     transition: opacity 0.2s linear;
     transition: width 0.2s linear;
     z-index: 1;
-
-    &:hover{
-        opacity: 1;
-        width: 110%;
-    }
+    opacity: .7;
 }
 
 .news__item--content{
     display: flex;
-    flex-wrap: wrap;
     align-content: center;
     width: 100%;
     height: 100%;
@@ -42,13 +45,74 @@
     z-index: 2;
 }
 
+.paginator__switch--next{
+    margin-left: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    background-color: #F98715;
+    border-radius: 50%;
+    cursor: pointer;
+    .switch__icon{
+        width: 70%;
+    }
+}
+
+.paginator__switch--prev{
+    margin-right: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    background-color: #F98715;
+    border-radius: 50%;
+    cursor: pointer;
+    .switch__icon{
+        width: 70%;
+    }
+}
+
+.news__paginator{
+    display: flex;
+    width: 50%;
+    justify-content: center;
+    margin-top: 20rem;
+    align-items: center;
+}
+
+.paginator__list{
+    display: inline-flex;
+    align-items: center;
+}
+
+.paginator__item{
+
+    width: 0.6rem;
+    height: 0.6rem;
+    background: #fff;
+    border-radius: 50%;
+    z-index: 2;
+    margin-left: 1rem;
+    &:first-child{
+        margin-left: 0;
+    }
+}
+
+.paginator__item.active{
+    width: 1.1rem;
+    height: 1.1rem;
+}
+
 .news__text--content{
-    margin-top: 3rem;
+    margin-top: 15rem;
     margin-left: 2rem;
 }
 
 .news__text{
-    width: 95%;
+    width: 50%;
     height: 100%;
 }
 
@@ -67,51 +131,6 @@
     text-shadow: 1px 1px 5px rgb(0 0 0 / 50%);
 }
 
-.news__paginator{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100%;
-    width: 5%;
-    background-color: #3d4252e0;
-}
-
-.paginator__item{
-    width: 0.7rem;
-    height: 0.7rem;
-    background-color: #fff;
-    border-radius: 50%;
-    margin-top: 1rem;
-}
-
-.paginator__up{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 2rem;
-    height: 2rem;
-    border-radius: 50%;
-    background-color: #E3B838;
-}
-
-.paginator__down{
-    margin-top: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 2rem;
-    height: 2rem;
-    border-radius: 50%;
-    background-color: #E3B838;
-}
-
-
-.paginator__icon{
-    
-    width: 60%;
-}
-
 .news__side{
     width: 30%;
     height: 100%;
@@ -120,7 +139,7 @@
 }
 
 .news__side--item{
-    background-color: #E3B838;
+    background-color: #F98715;
     margin-top: 2rem;
     height: 47%;
     width: 100%;
