--- a/components/programms.scss
+++ b/components/programms.scss
@@ -1,3 +1,4 @@
+
 .programms__title{
     font-size: 2.875rem;
     font-weight: bold;
@@ -20,18 +21,41 @@
 
 .programms__item{
     background: #fff;
-    width: 30%;
+    width: 31%;
     min-height: 25rem;
-    border: 1px solid rgba(0, 0, 0, 0.205);
-    border-radius: 10px;
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid transparent;
     overflow: hidden;
     margin: 0 2.438rem 2.438rem 0;
+
+    &:hover{
+        border: 1px solid #F98715;
+        border-radius: 10px;
+    }
+
+    &:nth-child(3n){
+        margin-right: 0;
+    }
+
+    &:hover .programms__item--title{
+        background-color: #F98715;
+        border: 2px solid transparent;
+        color: #fff;
+        font-weight: bold;
+        text-shadow: 1px 1px 5px rgb(0 0 0 / 50%);
+        border-radius: 15px;
+    }
 }
 
 
 .programms__item--title{
-    padding-top: 1rem;
+    padding: 1rem;
     text-align: center;
+    border: 2px solid transparent;
+    border-radius: 15px;
+    transition: background-color 0.2s linear;
 }
 
 .programms__text{
@@ -39,44 +63,39 @@
     font-size: 1rem;
     padding-top: 1rem;
     line-height: 1.3rem;
-}
-
-
-
-.programms__item:nth-child(3n){
-    margin-right: 0;
-}
-
-
-.programms__item:hover{
-    border: 1px solid #000;
+    text-align: center;
 }
 
 .programms__img{
    width: 100%;
     height: 9.375rem;
+    background-color: white;
 }
 
 .programms__item--content{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 0 1.25rem;
+    padding: 1rem 1.25rem;
 }
 
-.programms__button{
-    text-align: center;
-    padding: 0.938rem 0 5rem;
-}
 
 .programms__about{
     width: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: center;
     padding: 2.813rem 0 1.563rem;
 }
 
 .programms__link{
     color: #000081be;
     font-weight: bold;
+}
+
+.button__programms{
+    border: 1px solid black;
+    color: #000;
+
+    &:hover{
+        color: white;
+    }
 }
